--- a/templates/send_courier.html
+++ b/templates/send_courier.html
@@ -197,11 +197,13 @@ document.addEventListener("DOMContentLoaded", function() {
                             <label class="lab" for="checkbox-2">Отправить на не непартнёрские</label>
                         </div>
                         <h2 class="fill_grid">Кто эти курьеры?</h2>
+                        <div class="block-2">
                         <h1 class="text-one">ФИО</h1>
                         <h1 class="text-two">Авто</h1>
                         <h1 class="text-three">Госс номер</h1>
                         <h1 class="text-four">Телефон</h1>
                         <h1 class="text-five">Откуда</h1>
+                        </div>
                         <div id="blocks-container">
                             <div class="block">
                                 <input class="one" name="name" type="text" >
