--- a/static/History.css
+++ b/static/History.css
@@ -127,6 +127,12 @@ button:hover {
 }
 
 .commands {
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
     margin-top: 20px;
 }
 
