--- a/static/delivery_detail1.css
+++ b/static/delivery_detail1.css
@@ -112,6 +112,12 @@ h1 {
 }
 
 .commands {
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
     margin-top: 20px;
 }
 
