--- a/static/information.css
+++ b/static/information.css
@@ -118,6 +118,12 @@ h1 {
 }
 
 .commands {
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
     margin-top: 20px;
 }
 
