--- a/templates/set_pvz.html
+++ b/templates/set_pvz.html
@@ -89,6 +89,8 @@ function redirectToMain() {
                             <h1 class="but">Курьер</h1>
                             <h1 class="bet">/</h1>
                             <h1 class="bat">Отправить курьера</h1>
+                            <h1 class="bet">/</h1>
+                            <h1 class="bat">Выбрать ПВЗ</h1>
                         </div>
                         <h1 class="fill_grad">Куда поедут эти курьеры?</h1>
                         <h2 class="text-curier">Выберите курьер, по которому маршруту он поедет</h2>
