--- a/static/History.css
+++ b/static/History.css
@@ -151,6 +151,16 @@ button:hover {
     vertical-align: 5px;
 }
 
+.button {
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+    margin-bottom: 4%;
+}
+
 .but {
     color: white;
     font-family: Montserrat, sans-serif;
@@ -274,15 +284,14 @@ button:hover {
 }
 
 .status-block {
+    position: relative;
+    left: -100px;
     background-color: rgba(229, 234, 253, 1);
     height: 22px;
     width: 120px;
     float: right;
     border: 2px solid rgba(244, 244, 248, 1);
     border-radius: 10px;
-    margin-left: -145px;
-    margin-top: -22px;
-    padding: auto;
 }
 
 .status-block-text {
@@ -302,9 +311,6 @@ button:hover {
     float: right;
     border: 2px solid rgba(146, 230, 214, 1);
     border-radius: 10px;
-    margin-right: 145px;
-    margin-top: -22px;
-    padding: auto;
 }
 
 .status-block-text-1 {
@@ -323,4 +329,53 @@ button:hover {
     float: right;
     margin-top: 13px;
     margin-right: 30px;
+}
+
+.block-new {
+  background-color: white;
+  width: 1050px;
+  height: 50px;
+  margin-left: 3.8%;
+  color: rgba(244, 244, 248, 1);
+  border: 2px solid rgba(244, 244, 248, 1);
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 1px;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
+
+.block-new-2 {
+  background-color:rgba(21, 24, 30, 1);
+  width: 1050px;
+  margin-left: 3.8%;
+  color: rgba(244, 244, 248, 1);
+  /*border: 2px solid rgba(244, 244, 248, 1);*/
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 1px;
+  padding-left: 30px;
+  margin-bottom: 15px;
+}
+
+.column {
+  color: black;
+  font-family: Montserrat, sans-serif;
+  font-size: 15px;
+  width: 20%;
+  font-weight: normal;
+  margin-left: -23px;
+  padding: 0 10px;
+}
+
+.column-2 {
+  color: white;
+  font-family: Montserrat, sans-serif;
+  font-size: 15px;
+  width: 20%;
+  font-weight: normal;
+  margin-left: -23px;
+  padding: 0 10px;
 }
