--- a/templates/History_courier.html
+++ b/templates/History_courier.html
@@ -94,26 +94,32 @@ function redirectTO(path) {
                     <h1 class="fill">История выездов курьеров</h1>
                     <div class="button">
                         <button type="button" onclick="redirectToCourier()">Назад</button>
+                            <h1 class="but"  onclick="redirectToCourier()">Курьер</h1>
+                            <h1 class="bet">/</h1>
+                            <h1 class="bat">История заборов</h1>
                     </div>
                     <h2 class="fill_grade">В данном разделе вы можете посмотреть историю выездов курьеров</h2>
                 </div>
-                <h1 class="date">Дата выезда</h1>
-                <h1 class="charge">Кол-во курьеров</h1>
-                <h1 class="status1">Статус</h1>
-                {% for el in rows %}
-                <div onclick="redirectTO('{{ el.redirect_url|escapejs }}')" class="block">
-                    <img class="arrow" src="../static/Vector 14.png">
-                    <div class="text-block">
-                        <h1 class="date-block">{{ el.date }}</h1>
-                        <h1 class="charge-block">{{el.couriers}}</h1>
-                    </div>
+                <div class="block-new-2">
+                    <div class="column-2">Дата выезда</div>
+                    <div class="column-2">Кол-во курьеров</div>
+                    <div class="column-2">Статус</div>
+                </div>
+                    {% for el in rows %}
+                 <div onclick="redirectTO('{{ el.redirect_url|escapejs }}')" class="block-new">
+                            <div class="column">{{ el.date }}</div>
+                            <div class="column">{{el.couriers}}</div>
                     {% if el.status == 1 %}
+                        <div class="column">
                         <div class="status-block">
                             <h1 class="status-block-text">В процессе</h1>
                         </div>
+                        </div>
                     {% else %}
+                        <div class="column">
                         <div class="status-block-1">
                             <h1 class="status-block-text-1">Завершена</h1>
+                        </div>
                         </div>
                     {% endif %}
                 </div>
