--- a/static/information.css
+++ b/static/information.css
@@ -755,7 +755,7 @@ h1 {
 
 .prokrutka {
     height: 552px;
-    width: 1244px;
+    width: 60vw;
     background-color:white;
     border: 1px solid white;
     border-collapse: collapse;
