--- a/templates/History.html
+++ b/templates/History.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Вход</title>
+        <title>RATE-THIS</title>
         <link rel="stylesheet" href="../static/History.css" />
 
     </head>
@@ -94,7 +94,12 @@ function redirectTO(path) {
                     <h1 class="fill">История выдач</h1>
                     <div class="button">
                         <button type="button" onclick="redirectTO('delivery/')">Назад</button>
+                        <h1 class="but"  onclick="redirectToCourier()">Выдать товары</h1>
+                        <h1 class="bet">/</h1>
+                        <h1 class="bat">История выдач</h1>
                     </div>
+
+
                     <h2 class="fill_grade">В данном разделе вы можете посмотреть историю выдач товаров!</h2>
                 </div>
                 <h1 class="date">Дата выезда</h1>
