--- a/templates/History_courier.html
+++ b/templates/History_courier.html
@@ -111,14 +111,14 @@ function redirectTO(path) {
                             <div class="column">{{el.couriers}}</div>
                     {% if el.status == 1 %}
                         <div class="column">
-                        <div class="status-block">
-                            <h1 class="status-block-text">В процессе</h1>
+                        <div class="stat-block">
+                            <h1 class="stat-block-text">В процессе</h1>
                         </div>
                         </div>
                     {% else %}
                         <div class="column">
-                        <div class="status-block-1">
-                            <h1 class="status-block-text-1">Завершена</h1>
+                        <div class="stat-block-1">
+                            <h1 class="stat-block-text-1">Завершена</h1>
                         </div>
                         </div>
                     {% endif %}
