--- a/static/delivery_detail1.css
+++ b/static/delivery_detail1.css
@@ -101,7 +101,7 @@ h1 {
 .button-one:hover {
 	background: rgba(0,0,0,0);
 	color: #95E6D6;
-	box-shadow: inset 0 0 0 3px #95E6D6;
+	box-shadow: inset 0 0 0 1px #95E6D6;
 }
 
 .line {
@@ -188,7 +188,7 @@ h1 {
 
 .prokrutka {
     height: 552px;
-    width: 1244px;
+    width: 60vw;
     background-color:white;
     border: 1px solid white;
     border-radius: 10px;
@@ -208,7 +208,7 @@ table {
 }
 
 th {
-    height: 10px;
+    height: 30px;
     padding-left: 5px;
     padding-right: 5px;
     white-space: nowrap;
@@ -290,11 +290,11 @@ input {
 .button-delivery-two:hover {
 	background: rgba(0,0,0,0);
 	color: #FF5858;
-	box-shadow: inset 0 0 0 3px #FF5858;
+	box-shadow: inset 0 0 0 1px #FF5858;
 }
 
 .button-delivery:hover {
 	background: rgba(0,0,0,0);
 	color: #95E6D6;
-	box-shadow: inset 0 0 0 3px #95E6D6;
+	box-shadow: inset 0 0 0 1px #95E6D6;
 }
