create liner menu

--- a/static/mobile_main.css
+++ b/static/mobile_main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Monserrat';
+    src: url('https://fonts.googleapis.com/css2?family=Montserrat');
+}
+
 html, body {
     margin: 0;
     padding: 0;
@@ -583,9 +588,8 @@ input.brein {
     border: 1px solid transparent;
     border-radius: 10px;
 }
-.hidden {
-    display: none;
-}
+
+
 .show-image .image-container {
     display: flex;
     float: left;
@@ -595,7 +599,7 @@ input.brein {
 #dataContainer {
     position: fixed;
     top: 0;
-    left: 0;
+    left: -70%;
     width: 70%;
     height: 100%;
     background-color: #21272C;
@@ -603,6 +607,7 @@ input.brein {
     z-index: 9999; /* Выше, чем остальной контент */
     padding: 20px;
     box-sizing: border-box;
+    transition: left .2s linear;
 }
 
 .box-img {
