--- a/static/information.css
+++ b/static/information.css
@@ -24,11 +24,13 @@ html, body {
 .block-left {
     background-color: rgba(24, 32, 38, 1);
     width: 25%;
+    min-width: 350px;
 }
 
 .block-right {
     background-color: rgba(21, 24, 30, 1);
-    width: 75%;
+    min-width: 1400px;
+    width: 75vw;
 }
 
 .login {
@@ -572,10 +574,10 @@ h1 {
     font-family: Montserrat, sans-serif;
     font-size: 25px;
     text-decoration: none;
-    margin: 4px 2px;
+    /*margin: 4px 2px;*/
     cursor: pointer;
+    margin-bottom: 50px;
     margin-left: 50px;
-    margin-top: 50px;
 }
 
 .type2 {
