edit static for mobile

--- a/static/mobile_auth.css
+++ b/static/mobile_auth.css
@@ -5,7 +5,11 @@
 
 body {
     background-color: #95E6D6;
+    padding: 0;
+    margin-bottom: env(safe-area-inset-bottom); /* Учитываем безопасное пространство для iPhone X и аналогичных устройств */
+    overflow: hidden;
 }
+
 
 p {
     color: red;
