--- a/templates/select_delivery.html
+++ b/templates/select_delivery.html
@@ -91,11 +91,11 @@ function redirectToMain() {
                     </div>
                     <div class="check">
                         <input class="custom-checkbox" type="checkbox" name="send to partner pvz" id="checkbox-1" value="option1">
-                        <label for="checkbox-1">Отправить на партнёрские ПВЗ</label>
+                        <label for="checkbox-1">&nbsp&nbspОтправить на партнёрские ПВЗ</label>
                     </div>
                     <div>
                         <input class="custom-checkbox" type="checkbox" name="send to NOpartner pvz" id="checkbox-2" value="option2">
-                        <label for="checkbox-2">Отправить на непартнёрские ПВЗ</label>
+                        <label for="checkbox-2">&nbsp&nbspОтправить на непартнёрские ПВЗ</label>
                     </div>
                 </form>
             </div>
