--- a/static/History.css
+++ b/static/History.css
@@ -332,7 +332,7 @@ background-color: rgba(229, 234, 253, 1);
 
 .stat-block {
         position:  relative;
-    left: -150px;
+    left: -100px;
 background-color: rgba(229, 234, 253, 1);
     height: 22px;
     width: 120px;
@@ -376,7 +376,7 @@ background-color: rgba(229, 234, 253, 1);
     height: 20px;
     width: 13px;
     float: right;
-    margin-top: 13px;
+    /*margin-top: 13px;*/
     margin-right: 30px;
 }
 
