--- a/templates/courier_detail.html
+++ b/templates/courier_detail.html
@@ -104,10 +104,11 @@ function redirectTO(path) {
                     <p><br></p>
                     <div class="block-new-2">
                         <div class="column-2">id</div>
-                        <div class="column-2">Имя</div>
-                        <div class="column-2">Авто</div>
-                        <div class="column-2">Номер</div>
-                        <div class="column-2">Откуда</div>
+                        <div class="column-3">Имя</div>
+                        <div class="column-3">Авто</div>
+                        <div class="column-3">Номер</div>
+                        <div class="column-3">Откуда</div>
+                        <div class="column-4">Статус</div>
                     </div>
 
                     {% for i in list %}
