--- a/static/mobile_main.css
+++ b/static/mobile_main.css
@@ -9,11 +9,26 @@ html, body {
     overflow: hidden;
 }
 
+.dadada {
+    padding: 0;
+    margin: 0;
+    float: right;
+    overflow: hidden;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in-out; /* Плавное изменение положения */
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 5000; /* Выше, чем остальной контент */
+}
+
 .container {
     height: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    transition: transform 0.3s ease-in-out; /* Плавное изменение положения */
 }
 
 .block-top {
